# gpu-inference-microservice

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: backend-enhance.cpp  backend.cpp  kernel.cu
build_container/: CMakeCache.txt  Makefile  cmake_install.cmake
build_container/backend/: Makefile  cmake_install.cmake
build_container/client/: Makefile  cmake_install.cmake
client/: CMakeLists.txt
client/src/: client.cpp
model-repo/custom-model/: config.pbtxt
